# OtusHW2

./: .travis.yml  CMakeLists.txt  main.cpp
simpleIP4/: CMakeLists.txt  simpleIP4.cpp  simpleIP4.h
test/: test_version.cpp
